--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "orientis",
-    "short_name": "orientis",
+    "name": "orienty",
+    "short_name": "orienty",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
