--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,18 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="orientis"
+        android:label="orienty"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
-
-        <!--   APPWRITE Config     -->
-        <activity android:exported="true" android:name="com.linusu.flutter_web_auth_2.CallbackActivity" >
-            <intent-filter android:label="flutter_web_auth_2">
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="appwrite-callback-[PROJECT_ID]" />
-            </intent-filter>
-        </activity>
 
         <activity
             android:name=".MainActivity"
