--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,20 @@ dependencies:
   lucide_icons: ^0.257.0
   flutter_svg: ^2.0.16
   http: ^1.2.2
-  appwrite: ^13.0.0
   flutter_dotenv: ^5.2.1
   page_transition: ^2.1.0
   dot_navigation_bar: ^1.0.2
+  shared_preferences: ^2.3.3
+  awesome_snackbar_content: ^0.1.4
+
+  # Firebase
+  firebase_core: ^3.8.1
+  firebase_auth: ^5.3.4
+  cloud_firestore: ^5.5.1
+  firebase_realtime_chat: ^0.0.5
 
 dev_dependencies:
+  icons_launcher: ^3.0.0
   flutter_test:
     sdk: flutter
 
@@ -86,3 +94,19 @@ flutter:
     - family: BalooBhaijaan2
       fonts:
         - asset: assets/fonts/Fonts.ttf
+
+
+# Icon
+icons_launcher:
+  image_path: 'assets/icon/appIcon512.png'
+  platforms:
+    android:
+      enable: true
+      image_path: 'assets/icon/AppIcon512.png'
+      adaptive_background_color: '#fafbfd'
+      adaptive_foreground_image: 'assets/icon/icon512.png'
+      adaptive_round_image: 'assets/icon/icon512.png'
+      adaptive_monochrome_image: 'assets/icon/icon512.png'
+    ios:
+      enable: true
+      image_path: "assets/icon/appIcon.png"
